--- a/main.html
+++ b/main.html
@@ -59,10 +59,15 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h3>BENEFITS</h3>
+				<ul>
+					<li>Rich in Nutrients & Fiber</li>
+					<li>Supports Heart Health</li>
+					<li> Boosts Gut Health</li>
+					<li>Antioxidant Powerhouse</li>
+				</ul>
 			</div>
 		</div>
 	</section>
 </body>
-
 </html>
