--- a/main.html
+++ b/main.html
@@ -66,6 +66,7 @@
 					<li> Boosts Gut Health</li>
 					<li>Antioxidant Powerhouse</li>
 				</ul>
+				<button>ADD TO CART</button>
 			</div>
 		</div>
 	</section>
